fix: update rate limits and footer copyright year in index.html

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>&copy;  Trend Compass. Powered by Qloo + Gemini AI</p>
+            <p>&copy; 2025 Trend Compass AI. Powered by Qloo + Gemini AI</p>
             <div class="footer-links">
                 <a href="https://github.com/nishanajihah/trend-compass-ai" onclick="showAbout()">About</a>
                 <!-- <a href="#" onclick="showPrivacy()">Privacy</a> -->
