feat: Enhance UI and improve API status management
- Added new CSS file for enhanced styling with gradients and improved layout.
- Updated HTML to reflect new styles and improved server status messaging.
- Enhanced server status banner with clearer messaging and improved visibility.
- Improved API status check logic with better session management and error handling.
- Updated retry and refresh button labels for clarity.
- Enhanced animations for server status banner to draw user attention.

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <div id="serverStatusBanner" class="server-status-banner d-none">
                 <div class="banner-content">
                     <i class="fas fa-exclamation-triangle"></i>
-                    <span>Server connection issue detected. This could be due to the server being down or rate limits exceeded (15 requests per day).</span>
+                    <span>🚨 Connection Issue Detected - Server may be starting up or temporarily unavailable.</span>
                     <div class="banner-controls">
                         <button onclick="checkAPIStatus(true)" class="btn-retry">
-                            <i class="fas fa-sync-alt"></i> Retry Connection
+                            <i class="fas fa-sync-alt"></i> Test Again
                         </button>
-                        <button onclick="refreshApplication()" class="btn-retry" style="margin-left: 8px; background: linear-gradient(135deg, rgba(16, 185, 129, 0.15), rgba(5, 150, 105, 0.1)); border-color: rgba(16, 185, 129, 0.3); color: #059669;">
-                            <i class="fas fa-redo"></i> Full Refresh
+                        <button onclick="refreshApplication()" class="btn-retry">
+                            <i class="fas fa-redo"></i> Full Reset
                         </button>
                     </div>
                 </div>
