Update footer to display current year dynamically and modify API Docs link behavior
- Changed footer year to be dynamic using JavaScript.
- Updated API Docs link to open via a function instead of a direct URL.
- Updated script references in index.html and dist/index.html.

--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <p>&copy; 2025 Trend Compass AI. Powered by Qloo + Gemini AI</p>
+            <p>&copy; <span id="currentYear">2025</span> Trend Compass AI. Powered by Qloo + Gemini AI</p>
             <div class="footer-links">
                 <a href="https://github.com/nishanajihah/trend-compass-ai" onclick="showAbout()">About</a>
                 <!-- <a href="#" onclick="showPrivacy()">Privacy</a> -->
-                <a href="/docs" target="_blank">API Docs</a>
+                <a href="#" onclick="openAPIDocs()" target="_blank">API Docs</a>
             </div>
         </footer>
     </div>
